site/content/less/font-styles.less
a {
    .font-color(@color-accent);
    font-weight: bold;
    text-decoration: none;

    &:active,
    &:focus,
    &:hover {
        .font-color(darken(@color-accent, 20%));
    }
}

b {
    .font-color(@color-main-dark);
    font-weight: bold;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: @font-family-head;
    .font-color(@color-accent);
    line-height: @line-height-headers;
}

h1 {
    font-size: 2.5rem;

    & > .pre-title {
        display: block;
        margin-bottom: @spacing-sm;
        font-size: 1.5rem;
    }
}

.quote {
    font-family: @font-family-head;
    .font-color(@color-accent);
    font-size: 1.3rem;
    text-align: center;
}

